--- a/reflections/week11/01.md
+++ b/reflections/week11/01.md
@@ -8,9 +8,15 @@
 
 1. What does ***inheritance*** accomplish for us in C#?
 
+Inheritance, in C#, is the ability to create a class that inherits attributes and behaviors from an existing class. The newly created class is the derived (or child) class and the existing class is the base (or parent) class.
+
 2. How does ***member inheritance*** work in C#? Does a `Class` inherit all members of the base `Class`?
 
+It allows you to define a child class that reuses (inherits), extends, or modifies the behavior of a parent class. When you define a class to derive from another class, the derived class implicitly gains all the members of the base class, except for its constructors and finalizers. 
+
 3. How does ***accessibility*** affect inheritance?
+
+In Inheritance, an object acquires all the properties and behaviours of its parent object automatically. It allows reusability of the code and we can even extend or modify the behaviours which are defined in other class.
 
 ## Afternoon Assignment Link
 
