--- a/reflections/week11/02.md
+++ b/reflections/week11/02.md
@@ -6,9 +6,13 @@
 
 ## Questions
 
-1. What is the difference between a `PRIMARY KEY` and a `FOREIGN KEY`
+1. What is the difference between a `PRIMARY KEY` and a `FOREIGN KEY` 
+
+A PRIMARY KEY is used to uniquely identify each row in a table, while a FOREIGN KEY is used to establish a relationship between two tables by referring to the PRIMARY KEY of another table.
 
 2. What is an ***alias***?
+
+An alias is created using the "using" directive followed by the alias name and the type or namespace that you want to alias. Once the alias is created, you can use it in your code instead of the original name.
 
 3. Demonstrate how you would query a join statement that would get all of a doctors patients from the following collections:
 
@@ -36,6 +40,12 @@ CREATE TABLE doctors (
     REFERENCES patients(id),
 )
 
+SELECT patients.*
+FROM patients
+JOIN appointments ON patients.id = appointments.patientId
+JOIN doctors ON appointments.doctorId = doctors.id
+WHERE doctors.id = {doctorId};
+
 ```
 
 ## Afternoon Assignment Link
@@ -43,3 +53,4 @@ CREATE TABLE doctors (
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
