--- a/reflections/week11/03.md
+++ b/reflections/week11/03.md
@@ -8,9 +8,17 @@
 
 1. What is SQL injection?
 
+SQL injection is a type of attack that exploits vulnerabilities in an application's input fields to inject malicious SQL code into the database. This allows attackers to bypass security checks, access confidential information or modify the database. Proper input validation and using parameterized queries can help prevent SQL injection attacks.
+
 2. What are 3 methods SQL injection can be done by?
 
+- In-band SQLi - involves using the same channel for sending attack payloads and receiving results.
+- Blind SQLi - involves injecting SQL code that does not return any results or messages to the attacker, making it difficult to determine whether the attack was successful.
+- Out-of-band SQLi - can be used when the attacker is blocked from using the main channel for some reason.
+
 3. How can we detect and sanitize SQL injection attacks?
+
+To detect and prevent SQL injection attacks, it's important to validate and sanitize input fields, use parameterized queries, and implement security tools such as web application firewalls. Logging and monitoring application activity can also help identify and respond to attacks in real-time.
 
 ## Afternoon Assignment Link
 
