--- a/reflections/week11/05.md
+++ b/reflections/week11/05.md
@@ -3,6 +3,15 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I have better understanding of C# syntax and best practices.
+
 - What did you learn that was a shock or surprise?
+
 - What are you struggling with?
+
+It can be challenging to switch from C# backend development to Vue.js frontend development.
+
 - What would you count as a victory?
+
+I'm done with the backend for my final project and ready to work on the front end.
