--- a/reflections/week11/04.md
+++ b/reflections/week11/04.md
@@ -6,6 +6,8 @@
 
 Review and reflect on your experiences in this course, as this is the last lecture before your **final project**. What are your concerns? How do you plan to manage your time? What have you enjoyed most about the course up to this point?
 
+I have some concerns about the final project, I am confident that I have the skills and knowledge necessary to succeed. I plan to remain focused, work hard, and continue to learn and grow.
+
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
