added all spice

--- a/reflections/week11/04.md
+++ b/reflections/week11/04.md
@@ -10,6 +10,6 @@ I have some concerns about the final project, I am confident that I have the ski
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/AllSpice)**
 
 Identify at least 1 takeaway from today's assignment
