don't know what to say

--- a/reflections/week12/01.md
+++ b/reflections/week12/01.md
@@ -3,5 +3,12 @@ This is a stressful week! You are working on a project that closely mimics what 
 
 ## Prompts
 - How is today going? 
+
+I finished my backend on weekends, so I am happy to start on front end. 
 - Are you managing your stress?
+
+Yes, I am taking brakes and asking for help if I struggle with something for to long.
+
 - What has you most worried?
+
+I am worried that I made a mistake on backend and I have to go back and redo everything.
