--- a/reflections/week12/03.md
+++ b/reflections/week12/03.md
@@ -3,5 +3,8 @@ Have you started the client? How is your Vue application shaping up? Do you have
 
 ## Prompts
 - How is today going? 
+
+Today I was working on mobile view of my application.
+
 - Are you managing your stress?
 - What has you most worried?
