--- a/reflections/week12/04.md
+++ b/reflections/week12/04.md
@@ -3,5 +3,11 @@ One day left! You can do it! We believe in you!💖 Are you timeboxing appropria
 
 ## Prompts
 - How is today going? 
+
+I passed my final today and it is exiting!
+
 - Are you managing your stress?
+
+Now I am ready to stress about carrier week and job searching.
+
 - What has you most worried?
