--- a/reflections/week12/05.md
+++ b/reflections/week12/05.md
@@ -3,6 +3,10 @@ The final week, the final day of coursework. How did it go? Are you ready for ca
 
 ## Prompts
 - What went well this week?
+
+I passed the course! 🎉🎉🎉
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+I passed the course! 🎉🎉🎉
